--- a/page2.html
+++ b/page2.html
@@ -23,7 +23,7 @@
 <p>This is my second paragraph of information. </p>
 
 
-<table border="1">
+<table>
     <caption>Calories Comparison of Popular Burgers</caption>
     <thead>
         <tr>
@@ -59,4 +59,9 @@
             <td>Whataburger</td>
         </tr>
     </tfoot>
+   
 </table>
+<!--Footer-->
+    <footer>&copy; Copyright 2023</footer>
+    </div>
+    </html>
